# SRB2-Android-Port

./: .gitignore  README.md
android-port/: BUILD_GUIDE.md  README.md  build.gradle  download_gradle_wrapper.bat  gradle.properties  settings.gradle  setup_and_build.bat
android-port/app/: build.gradle  proguard-rules.pro
android-port/app/src/main/: AndroidManifest.xml
android-port/app/src/main/assets/srb2data/: README.txt
android-port/app/src/main/java/org/srb2/android/: SRB2Activity.java  TouchControlsView.java
android-port/app/src/main/jni/: CMakeLists.txt  FindMbedTLS.cmake  srb2_android.c
android-port/app/src/main/jni/include/: SDL_opengl.h
android-port/app/src/main/res/values/: strings.xml  styles.xml
src/: d_main.c  g_input.c  hu_stuff.c  lua_script.c  w_wad.c
src/netcode/: d_netfil.c  http-mserv.c  mserv.c
src/sdl/: i_main.c  i_system.c  i_video.c  ogl_sdl.c
